add UserConfig in init file

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -1,32 +1,34 @@
 [UserConfig]
-用户名配置
-#format  username|password
+#用户名配置
+;format  username|password
 UserName1=	admin|admin      
 UserName2=	test|test
 UserName3=	honeywell|honeywell
 UserName4=	admin|admin
+UserName5=	admin|admin
+UserName6=	admin|admin2
 [PunctureSensorConfig]
 Serial_Port=	com3
-#当压力计读值大于此值则结束，Z轴返回
+;当压力计读值大于此值则结束，Z轴返回
 MaxPuncture=	100
-#压力计下压的速度
+;压力计下压的速度
 PunctureSpeed=	10
 [XYZAxisConfig]
-#样品1的位置配置
+;样品1的位置配置
 Op1_1_X=		300
 Op1_2_Y=		300
 Op1_3_Z=		300
 Rp1_1_X=		300
 Rp1_2_Y=		300
 Rp1_3_Z=		300
-#样品2的位置配置
+;样品2的位置配置
 Op2_1_X=		300
 Op2_2_Y=		300
 Op2_3_Z=		300
 Rp2_1_X=		300
 Rp2_2_Y=		300
 Rp2_3_Z=		300
-#样品3的位置配置
+;样品3的位置配置
 Op3_1_X=		300
 Op3_2_Y=		300
 Op3_3_Z=		300
