back up for 2019-09-24

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -8,30 +8,28 @@ UserName4=	admin|admin
 UserName5=	admin|admin
 UserName6=	admin|admin2
 [PunctureSensorConfig]
-Serial_Port=	com3
-;当压力计读值大于此值则结束，Z轴返回
-MaxPuncture=	100
-;压力计下压的速度
-PunctureSpeed=	10
+;压力传感器的串口
+Serial_Port=	com1
 [XYZAxisConfig]
-;样品1的位置配置
-Op1_1_X=		300
-Op1_2_Y=		300
-Op1_3_Z=		300
-Rp1_1_X=		300
-Rp1_2_Y=		300
-Rp1_3_Z=		300
-;样品2的位置配置
-Op2_1_X=		300
-Op2_2_Y=		300
-Op2_3_Z=		300
-Rp2_1_X=		300
-Rp2_2_Y=		300
-Rp2_3_Z=		300
-;样品3的位置配置
-Op3_1_X=		300
-Op3_2_Y=		300
-Op3_3_Z=		300
-Rp3_1_X=		300
-Rp3_2_Y=		300
-Rp3_3_Z=		300
+;样品的位置配置,第一个样品的XY位置
+x_start_point=	43069
+y_start_point=	31406
+x_speed=		20000
+y_speed=		10000
+;样品之间的距离 （x轴10000 = 10mm),(y 轴1000=5mm）
+x_interval=	40000
+y_interval=	50000
+;z轴(上下轴）测试的开始位置脉冲数
+z_start_point=	100000
+;z轴(上下轴）原点到达开始测试位置的速度
+z_speed_1=	30000
+;z轴(上下轴）测试压力的速度
+z_speed_2=	5000
+;z轴(上下轴）测试压力的最大行程
+max_puncual_route=60000
+;最大极限值，当压力计读值大于此值则结束，结束本样品测试，Z轴返回
+max_puncual_limit=	1.0
+[SysConfig]
+;测试模式, if Deubg is True, then will not move C89401A
+Debug_Move=		True
+Debug_Input=		True
