update on 09/26 for read data

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -29,6 +29,8 @@ z_speed_2=	5000
 max_puncual_route=60000
 ;最大极限值，当压力计读值大于此值则结束，结束本样品测试，Z轴返回
 max_puncual_limit=	1.0
+;最大极限值微调，因为传感器和计算机以及三轴平台交互需要反应时间，通常计算机读到最大值max_puncual_limit时，给Z轴下达停止指令后，三轴平台Z轴需要反应时间，此时压力计的读值值已经超过了max_puncual_limit。所以设置此值.
+max_pncual_limit_fine_tune= 0.9
 [SysConfig]
 ;测试模式, if Deubg is True, then will not move C89401A
 Debug_Move=		True
