change ctype mtype to combox

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -35,3 +35,8 @@ max_pncual_limit_fine_tune= 0.9
 ;测试模式, if Deubg is True, then will not move C89401A
 Debug_Move=		True
 Debug_Input=		True
+;输入的配置信息
+specimen_color=     red|orange|yellow|green|blue|indigo 
+materia_type=        rubber 
+chemistry_type=     HCL|H2SO4|NaOH
+
