--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -7,6 +7,7 @@ UserName3=	honeywell|honeywell
 UserName4=	admin|admin
 UserName5=	admin|admin
 UserName6=	admin|admin2
+UserName7=	linda|admin
 [PunctureSensorConfig]
 ;压力传感器的串口
 Serial_Port=	com1
@@ -16,19 +17,19 @@ x_start_point=	43069
 y_start_point=	31406
 x_speed=		20000
 y_speed=		10000
-;样品之间的距离 （x轴10000 = 10mm),(y 轴10000=5mm）
+;样品之间的距离 （x，y轴10000 = 10mm),(z 轴10000=5mm）
 x_interval=	40000
 y_interval=	50000
 ;z轴(上下轴）测试的开始位置脉冲数
 z_start_point=	100000
 ;z轴(上下轴）原点到达开始测试位置的速度
 z_speed_1=	30000
-;z轴(上下轴）测试压力的速度
-z_speed_2=	5000
+;z轴(上下轴）测试压力的速度 3333,  100mm per Min
+z_speed_2=	3333
 ;z轴(上下轴）测试压力的最大行程
-max_puncual_route=60000
+max_puncual_route=150000
 ;最大极限值，当压力计读值大于此值则结束，结束本样品测试，Z轴返回
-max_puncual_limit=	3.0
+max_puncual_limit=	44.0
 ;最大极限值微调，因为传感器和计算机以及三轴平台交互需要反应时间，通常计算机读到最大值max_puncual_limit时，给Z轴下达停止指令后，三轴平台Z轴需要反应时间，此时压力计的读值值已经超过了max_puncual_limit。所以设置此值.
 max_pncual_limit_fine_tune= 0.9
 [SysConfig]
