test program updated for for new quest from customer, add "remove liner', add mertiera type, chemistry type, add the image when test start

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -34,10 +34,10 @@ max_puncual_limit=	44.0
 max_pncual_limit_fine_tune= 0.9
 [SysConfig]
 ;测试模式, if Deubg is True, then will not move C89401A
-Debug_Move=		True
+Debug_Move=		False
 Debug_Input=		True
 ;输入的配置信息
 specimen_color=     red|orange|yellow|green|blue|indigo 
-materia_type=        rubber 
-chemistry_type=     HCL|H2SO4|NaOH
+materia_type=        Nitrile rubber(NRB)|Natural rubber(NR)|Chloroprene rubber(CR)|Butyl rubber|Others 
+chemistry_type=     Methanol|Acetone|Acetonitrile|Dichloromethane|Carbon disulphide|Toluene|Diethylamine|Tetrahydrofuran|Ethyl acetate|n-heptane|40 per cent Sodium dydroxide|96 per cent Sulphuric acid|65 per cent nitric acid|99 per cent aceti acid|25 per cent ammonium hydroxide|30 per cent dydrogen peroxide|40 per cent dydrofluoric acid|37 per cent formaldehyde|Others
 
