stable version for all function

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -34,7 +34,7 @@ max_puncual_limit=	44.0
 max_pncual_limit_fine_tune= 0.9
 [SysConfig]
 ;测试模式, if Deubg is True, then will not move C89401A
-Debug_Move=		False
+Debug_Move=		True
 Debug_Input=		True
 ;输入的配置信息
 specimen_color=     red|orange|yellow|green|blue|indigo 
