Final version to commit to custmer

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -29,13 +29,20 @@ z_speed_2=	3333
 ;z轴(上下轴）测试压力的最大行程
 max_puncual_route=150000
 ;最大极限值，当压力计读值大于此值则结束，结束本样品测试，Z轴返回
-max_puncual_limit=	44.0
+max_puncual_limit=	200.0
 ;最大极限值微调，因为传感器和计算机以及三轴平台交互需要反应时间，通常计算机读到最大值max_puncual_limit时，给Z轴下达停止指令后，三轴平台Z轴需要反应时间，此时压力计的读值值已经超过了max_puncual_limit。所以设置此值.
 max_pncual_limit_fine_tune= 0.9
 [SysConfig]
 ;测试模式, if Deubg is True, then will not move C89401A
 Debug_Move=		True
 Debug_Input=		True
+;图标的显示范围
+Graf_XRange=   2|80
+Graf_YRange=    -1|80
+;图像的取值个数 4000 个数据点对应75mm
+Graf_MaxPointsAmount=4000
+;图像显示的最大行程mm数。 150000/10000*5mm  (z 轴10000=5mm) 已经在程序中动态计算，无需理会此参数
+Graf_Max_Route_mm=75
 ;输入的配置信息
 specimen_color=     red|orange|yellow|green|blue|indigo 
 materia_type=        Nitrile rubber(NRB)|Natural rubber(NR)|Chloroprene rubber(CR)|Butyl rubber|Others 
