--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -1,33 +1,29 @@
 [UserConfig]
 #用户名配置
 ;format  username|password
-UserName1=	admin|admin      
+UserName1=	honeywell|HON123well
 UserName2=	test|test
-UserName3=	honeywell|honeywell
-UserName4=	admin|admin
-UserName5=	admin|admin
-UserName6=	admin|admin2
-UserName7=	linda|admin
+UserName3=	linda|admin
 [PunctureSensorConfig]
 ;压力传感器的串口
 Serial_Port=	com1
 [XYZAxisConfig]
 ;样品的位置配置,第一个样品的XY位置
-x_start_point=	43069
+x_start_point=	42069
 y_start_point=	31406
-x_speed=		20000
-y_speed=		10000
+x_speed=		80000
+y_speed=		80000
 ;样品之间的距离 （x，y轴10000 = 10mm),(z 轴10000=5mm）
 x_interval=	40000
 y_interval=	50000
 ;z轴(上下轴）测试的开始位置脉冲数
-z_start_point=	100000
+z_start_point=	80000
 ;z轴(上下轴）原点到达开始测试位置的速度
 z_speed_1=	30000
 ;z轴(上下轴）测试压力的速度 3333,  100mm per Min
 z_speed_2=	3333
 ;z轴(上下轴）测试压力的最大行程
-max_puncual_route=150000
+max_puncual_route=120000
 ;最大极限值，当压力计读值大于此值则结束，结束本样品测试，Z轴返回
 max_puncual_limit=	200.0
 ;最大极限值微调，因为传感器和计算机以及三轴平台交互需要反应时间，通常计算机读到最大值max_puncual_limit时，给Z轴下达停止指令后，三轴平台Z轴需要反应时间，此时压力计的读值值已经超过了max_puncual_limit。所以设置此值.
@@ -35,7 +31,7 @@ max_pncual_limit_fine_tune= 0.9
 [SysConfig]
 ;测试模式, if Deubg is True, then will not move C89401A
 Debug_Move=		True
-Debug_Input=		True
+Debug_Input=		False
 ;图标的显示范围
 Graf_XRange=   2|80
 Graf_YRange=    -1|80
