Update the defalut password

--- a/Ui/Config.ini
+++ b/Ui/Config.ini
@@ -1,7 +1,7 @@
 [UserConfig]
 #用户名配置
 ;format  username|password
-UserName1=	honeywell|HON123well
+UserName1=	Honeywell|HON123well
 UserName2=	test|test
 UserName3=	linda|admin
 [PunctureSensorConfig]
